--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: ecommerce
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
