--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3 
+      - uses: actions/checkout@v2 
       - name: Deploy in EC2
         env:
             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
@@ -43,7 +43,7 @@ jobs:
             USER_NAME : ${{ secrets.USER_NAME  }}
             
         run: | 
-          ssh -o StrictHostKeyChecking=no -i ${PRIVATE_KEY} ${USER_NAME}@${HOSTNAME} 
+          ssh -i ${PRIVATE_KEY} ${USER_NAME}@${HOSTNAME} 
           
             #Now we have got the access of EC2 and we will start the deploy.
             cd /app/awsapi &&
