--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,7 +43,8 @@ jobs:
             USER_NAME : ${{ secrets.USER_NAME  }}
             
         run: |
-          ssh -o StrictHostKeyChecking=no -i $PRIVATE_KEY $USER_NAME@$HOSTNAME -tt
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key &&
+          ssh -o StrictHostKeyChecking=no -i private_key $USER_NAME@$HOSTNAME -tt
           
             #Now we have got the access of EC2 and we will start the deploy.
             cd /app/awsapi &&
