--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,7 +44,7 @@ jobs:
             
         run: |
             echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
-            ssh -i private_key ${{env.USER_NAME}}@${{env.HOSTNAME}}
+            ssh -i private_key ${{env.USER_NAME}}@${{env.HOSTNAME}} -tt
           
             #Now we have got the access of EC2 and we will start the deploy.
             cd /app/awsapi &&
