--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,11 +40,10 @@ jobs:
         env:
             PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
             HOSTNAME : ${{ secrets.HOSTNAME  }}
-            USER_NAME : ${{ secrets.USER_NAME  }}
             
         run: |
             echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
-            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} -tt
+            ssh -o StrictHostKeyChecking=no -i private_key ${HOSTNAME} -tt
           
             #Now we have got the access of EC2 and we will start the deploy.
             cd /app/awsapi &&
