--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,8 +45,10 @@ jobs:
             echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
             ssh -o StrictHostKeyChecking=no -i private_key ${HOSTNAME} -tt
           
-            cd /app &&
-            cd awsapi &&
+            cd /app/awsapi &&
+            git checkout master &&
+            git fetch --all &&
+            git reset --hard origin/master &&
             git pull origin master &&
             npm run build &&
             pm2 start "npm run start:prod" -i max &&
