--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,12 +45,12 @@ jobs:
             echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
             ssh -o StrictHostKeyChecking=no -i private_key ${HOSTNAME} -tt
           
-            cd /app/awsapi &&
-            git checkout master &&
-            git fetch --all &&
-            git reset --hard origin/master &&
-            git pull origin master &&
-            npm run build &&
-            pm2 start "npm run start:prod" -i max &&
-            pm2 save &&
-            pm2 startup
+      - run: cd /app/awsapi
+      - run: git checkout master
+      - run: git fetch --all
+      - run: git reset --hard origin/master
+      - run: git pull origin master
+      - run: npm run build
+      - run: pm2 start "npm run start:prod" -i max
+      - run: pm2 save
+      - run: pm2 startup
